distros/T/Test-UsedModules/t/resource/lib/Test/UsedModules/Fail/3.pm
package Test::UsedModules::Fail::3;
use strict;
use warnings;
use utf8;

use File::Spec::Functions qw/catfile/;

1;
